WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195211
[WPE] Public API headers are missing autocleanup definitions
https://bugs.webkit.org/show_bug.cgi?id=195211
Summary
[WPE] Public API headers are missing autocleanup definitions
Adrian Perez
Reported
2019-03-01 09:04:48 PST
For the GTK port, there are the following headers which define them: * Source/WebKit/UIProcess/API/gtk/WebKitAutocleanups.h * Source/WebKit/WebProcess/InjectedBundle/API/gtk/WebKitWebExtensionAutocleanups.h …but the WPE port does not have them.
Attachments
Patch
(11.63 KB, patch)
2019-03-01 09:34 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Patch v2
(11.57 KB, patch)
2019-03-01 09:58 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-03-01 09:34:59 PST
Created
attachment 363336
[details]
Patch
Adrian Perez
Comment 2
2019-03-01 09:58:24 PST
Created
attachment 363341
[details]
Patch v2
Adrian Perez
Comment 3
2019-03-01 10:04:49 PST
If there are no objections, I would like to have this merged to the 2.24 release branch as well =)
Philippe Normand
Comment 4
2019-03-01 10:46:21 PST
Comment on
attachment 363341
[details]
Patch v2 View in context:
https://bugs.webkit.org/attachment.cgi?id=363341&action=review
> Source/WebKit/UIProcess/API/wpe/WebKitAutocleanups.h:13 > + * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS''
Any reason for using Apple's copyright header instead of the usual LGPL header?
Adrian Perez
Comment 5
2019-03-01 10:57:12 PST
(In reply to Philippe Normand from
comment #4
)
> Comment on
attachment 363341
[details]
> Patch v2 > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=363341&action=review
> > > Source/WebKit/UIProcess/API/wpe/WebKitAutocleanups.h:13 > > + * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS'' > > Any reason for using Apple's copyright header instead of the usual LGPL > header?
I guess none. In this case the headers were copied from the GTK port and adapted, so the GTK port headers are also using this instead of the LGPL license blurb. My guess is that when the headers for the autocleanups were first added for the GTK port nobody realized during the review that the LGPL version should have been used (as seen in the rest of GTK/WPE API headers).
Philippe Normand
Comment 6
2019-03-02 09:24:29 PST
Comment on
attachment 363341
[details]
Patch v2 Let's land this and fix the headers later on.
Adrian Perez
Comment 7
2019-03-02 09:29:55 PST
(In reply to Adrian Perez from
comment #5
)
> (In reply to Philippe Normand from
comment #4
) > > Comment on
attachment 363341
[details]
> > Patch v2 > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=363341&action=review
> > > > > Source/WebKit/UIProcess/API/wpe/WebKitAutocleanups.h:13 > > > + * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS'' > > > > Any reason for using Apple's copyright header instead of the usual LGPL > > header? > > I guess none. In this case the headers were copied from the GTK port > and adapted, so the GTK port headers are also using this instead of the > LGPL license blurb. My guess is that when the headers for the autocleanups > were first added for the GTK port nobody realized during the review that > the LGPL version should have been used (as seen in the rest of GTK/WPE > API headers).
There's only a few authors for these files, so it should be easy to find the people and have them agree to change the license header. I have filed
bug #195245
to do that.
WebKit Commit Bot
Comment 8
2019-03-02 09:50:18 PST
Comment on
attachment 363341
[details]
Patch v2 Clearing flags on attachment: 363341 Committed
r242312
: <
https://trac.webkit.org/changeset/242312
>
WebKit Commit Bot
Comment 9
2019-03-02 09:50:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug